testsuite/tests/properties/invalid_eq/entity_cross/test.lkt
from common import FooNode, Lit

class Example: FooNode {
    @exported fun prop(): Bool = self.parent.as[Lit] == self
}
